plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.munichweekly'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
    runtimeOnly 'org.postgresql:postgresql'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // JSON 序列化支持
    // Spring Security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    implementation 'org.reflections:reflections:0.10.2'
    //AWS S3
    implementation 'software.amazon.awssdk:s3:2.21.37'
    implementation 'software.amazon.awssdk:auth:2.21.37'
    
    // Mailjet API
    implementation 'com.mailjet:mailjet-client:5.2.4'
    implementation 'org.json:json:20231013'
    
    // 🔧 新增：EXIF 元数据读取库
    implementation 'com.drewnoakes:metadata-extractor:2.19.0'
}


tasks.named('test') {
    useJUnitPlatform()
}

// Configure compiler options to show all warnings
tasks.withType(JavaCompile) {
    options.compilerArgs += [
        '-Xlint:all',           // Enable all warnings
        '-Xlint:-processing',   // Disable annotation processing warnings
        '-Xlint:-serial',       // Disable serialVersionUID warnings
        '-Xlint:-this-escape'   // Disable this-escape warnings for constructors
    ]
    options.encoding = 'UTF-8'
}
